payment application service

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
         <module>order-service</module>
         <module>common</module>
         <module>infrastructure</module>
+        <module>customer-service</module>
+        <module>payment-service</module>
+        <module>restaurant-service</module>
     </modules>
 
     <parent>
@@ -58,6 +61,14 @@
                 <artifactId>order-messaging</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <!--              PAYMENT SERVICE                      -->
+            <dependency>
+                <groupId>com.food.ordering.system</groupId>
+                <artifactId>payment-domain-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <!--              RESTAURANT SERVICE                      -->
 
             <!--                    COMMON                      -->
             <dependency>
