--- a/restaurant-service/restaurant-domain/restaurant-domain-core/pom.xml
+++ b/restaurant-service/restaurant-domain/restaurant-domain-core/pom.xml
@@ -11,4 +11,10 @@
 
     <artifactId>restaurant-domain-core</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
+    </dependencies>
 </project>
