--- a/infrastructure/saga/pom.xml
+++ b/infrastructure/saga/pom.xml
@@ -10,5 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>saga</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
